minor fix for Text Align in dialogue

--- a/src/app/Pages/pack-content-page/pack-content-page.component.css
+++ b/src/app/Pages/pack-content-page/pack-content-page.component.css
@@ -380,6 +380,7 @@ li span {
   font-weight: 600;
   font-size: 38;
   margin-bottom: 5px;
+  text-align: center;
 }
 
 /* Aside bar */
